# Issues
- LZc(norm="max") too strict
- SCE(norm="max") too strict

# TODO
- Generalize normalization functions
- Make code more efficient
- Add more measures
- Better documentation

# Version 0.1
- Basic setup
- Basic framework
- Added quality tests: centrality, normality
- Added measures: LZc, ACE, SCE
- See Schartner et al 2015: [citation here]

# Version 0.2